--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@auth/mongodb-adapter": "^3.7.4",
     "@google/generative-ai": "^0.21.0",
+    "framer-motion": "^11.13.1",
     "mongodb": "^6.11.0",
     "mongoose": "^8.8.3",
     "next": "15.0.3",
